--- a/a.html
+++ b/a.html
@@ -82,6 +82,7 @@ a
   font-size: 15px;
   font-family: "times in new roman";
   
+  
 }
 
 
@@ -359,7 +360,7 @@ border-radius: 20px;
 
 <div class="row">
   <div class="col-md-12">
-<center><h2 style="font-family:Copperplate Gothic Bold;color: white;padding-top: 5%"><u>INTRODUCTION TO PHOTOGRAPHY</u></h2></center>
+<center><h2 style="font-family:Copperplate Gothic Bold;color: black;padding-top: 5%"><u>INTRODUCTION TO PHOTOGRAPHY</u></h2></center>
 </div>
 </div>
 
@@ -379,7 +380,7 @@ border-radius: 20px;
 </div>
 
 <div class="row">
-  <div class="col-md-8"style="font-size: 10px;color: white">
+  <div class="col-md-8"style="font-size: 10px;color: black">
   <h5>This introduction to photography is written for beginners, with several tips and suggestions to take your skills as far as possible. However, writing an introduction to photography is like writing an introduction to words; as amazing and important as it is, photography can be almost limitlessly complex. <p>What separates inspiring photographs from ordinary ones, and how can you improve the quality of your own work? This article lays a foundation to answer to those questions and more.</p></h5>
 </div>
   <div class="col-md-4">
@@ -392,7 +393,7 @@ border-radius: 20px;
 
 <div id="About-content">
 
-<center><h1 class="nav-item1"style="font-family:Copperplate Gothic Bold;color: white"><u>About Me</u></h1></center>
+<center><h1 class="nav-item1"style="font-family:Copperplate Gothic Bold;color: black"><u>About Me</u></h1></center>
 
 
 <div class="row"style="padding-top:60px">
@@ -404,13 +405,13 @@ border-radius: 20px;
   </div>
 
 
-<div class="col-md-8"style="font-size: 10px;color: white">
+<div class="col-md-8"style="font-size: 10px;color: black">
   <h5>
     <p>I'am Datta Fadatare. I'am Photographer. For me photography is not just a job , it's my passion. I love to take shots of hundred smiles,families,friends which they will not forget those moments which they have spent together. I have started my journey in 2008. </p><p>There is too much hard work in photography, but I always finds smile,love,friendship in that hardwork. Because it not makes me tired , it always makes me happy. Photography always says that, hey man just make your life like a smiley even if you are sad, you will feel alone in your life. It's my duty to make there faces smileful, not for long time but for some time. </p>
     </h5>
 </div> 
 </div>
-<h4 style="color: white;font-family:Copperplate Gothic Bold;padding-top: 2%">SOME PHOTOGRAPHS DONE BY ME ARE GIVEN BELOW:</h4>
+<h4 style="color: black;font-family:Copperplate Gothic Bold;padding-top: 2%">SOME PHOTOGRAPHS DONE BY ME ARE GIVEN BELOW:</h4>
 
 
 
@@ -462,7 +463,7 @@ border-radius: 20px;
 <div class="row">
 
   <div class="col-md-12">
-    <center><h1 class="nav-item"style="font-family:Copperplate Gothic Bold;color: white"><b><u>Photo Gallery</u></b></h1></center>
+    <center><h1 class="nav-item"style="font-family:Copperplate Gothic Bold;color: black"><b><u>Photo Gallery</u></b></h1></center>
   </div>
 </div>
 
@@ -538,7 +539,7 @@ border-radius: 20px;
 </div>
 
 <div id="service-content">
-<center><h1 style="font-family:Copperplate Gothic Bold;color: white"><b><u>Service</u></b></h1></center>
+<center><h1 style="font-family:Copperplate Gothic Bold;color: black"><b><u>Service</u></b></h1></center>
 <center><h4>(Click On Image To View More)</h4></center>
   <div class="row"style="padding-top:60px;padding-left: 10%">
 
@@ -589,7 +590,7 @@ border-radius: 20px;
 
 
 
-<center><h1 class="nav-item1"style="font-family:Copperplate Gothic Bold;color: white;padding-top: 10%"><b><u>Contact Us</u>
+<center><h1 class="nav-item1"style="font-family:Copperplate Gothic Bold;color: black;padding-top: 10%"><b><u>Contact Us</u>
 </b>
 </h1>
 </center>
@@ -604,7 +605,7 @@ border-radius: 20px;
                             <div class="s_contuct_icon">
                                 <i class="fa fa-map-marker"style="color: red"></i>
                             </div>
-                            <h4 style="color: white">Address</h4>
+                            <h4 style="color: black">Address</h4>
                             <p>yevalewadi</p>
                         </div>
                     </md-card>
@@ -615,7 +616,7 @@ border-radius: 20px;
                             <div class="s_contuct_icon">
                                 <i class="fa fa-envelope-o"style="color:yellow"></i>
                             </div>
-                            <h4 style="color: white">E-mail</h4>
+                            <h4 style="color: black">E-mail</h4>
                             <p>fadatare.com <br/> 
                             <br>
                             </p>
@@ -629,7 +630,7 @@ border-radius: 20px;
                             <div class="s_contuct_icon">
                                 <i class="fa fa-phone"style="color: green"></i>
                             </div>
-                            <h4 style="color: white">Phone</h4>
+                            <h4 style="color: black">Phone</h4>
                             <p>+9762131414<br>
                         </p><br>
                         </div>
@@ -641,7 +642,7 @@ border-radius: 20px;
                             <div class="s_contuct_icon">
                                 <i class="fa fa-clock-o"style="color: white"></i>
                             </div>
-                            <h4 style="color: white">Working Hour</h4>
+                            <h4 style="color: black">Working Hour</h4>
                             <p>Monday To Sunday  : 9:00 Am to 9:00 Pm<br/></p>
                         </div>
 
@@ -649,7 +650,7 @@ border-radius: 20px;
                     </div>
 
                 </div>
-                  <center> <ul><li><b style="color: white">Follow Us On->-></b><a href="https://www.facebook.com/dnyaneshwar.shendkar.7/"><i class="fa fa-facebook" style="font-size:24px;color: white">
+                  <center> <ul><li><b style="color: black">Follow Us On->-></b><a href="https://www.facebook.com/dnyaneshwar.shendkar.7/"><i class="fa fa-facebook" style="font-size:24px;color: white">
                       
                   </i>
                 </a>
