--- a/a.html
+++ b/a.html
@@ -373,7 +373,7 @@ border-radius: 20px;
   </div>
 
 
-<div class="col-md-8"style="font-size: 10px;color: white">
+<div class="col-md-8"style="font-size: 10px;color: black">
   <h5>The word photograph was coined in 1839 by Sir John Herschel and is based on the Greek φῶς (phos), meaning "light," and γραφή (graphê), meaning "drawing, writing," together meaning "drawing with light."[1]
     <p>Photography is the art, application, and practice of creating durable images by recording light, either electronically by means of an image sensor, or chemically by means of a light-sensitive material such as photographic film.</p></h5>
 </div> 
