--- a/a.html
+++ b/a.html
@@ -466,7 +466,7 @@ border-radius: 20px;
     <center><h1 class="nav-item"style="font-family:Copperplate Gothic Bold;color: black"><b><u>Photo Gallery</u></b></h1></center>
   </div>
 </div>
-
+<center>
 <div class="row">
 
   <div class="col-md-4">
@@ -536,7 +536,7 @@ border-radius: 20px;
 
 </div>
 </div>
-</div>
+</center>
 
 <div id="service-content">
 <center><h1 style="font-family:Copperplate Gothic Bold;color: black"><b><u>Service</u></b></h1></center>
