--- a/a.html
+++ b/a.html
@@ -545,35 +545,35 @@ border-radius: 20px;
   <div class="row"style="padding-top:60px;padding-left: 10%">
 
   <div class="col-md-4">
-  <div class="card" style="width:250px;background-color:rgb(106, 90, 205);border-width: 20px">
+  <div class="card" style="width:250px;background-color:rgb(106, 90, 205);border-width: 20px;margin-top: 5%;">
     <img class="card-img-top" src="image/mug1.jpg" alt="Card image" style="width:100%;background-color:white;cursor: pointer"onclick="window.location.href='mug.html'"><center><b>PRINTED MUGS</b></center>
     </div>
   </div>
 
     <div class="col-md-4">
-  <div class="card" style="width:250px;background-color:rgb(106, 90, 205);border-width: 20px">
+  <div class="card" style="width:250px;background-color:rgb(106, 90, 205);border-width: 20px;margin-top: 5%;">
     <img class="card-img-top" src="image/cushion1.jpg" alt="Card image" style="width:100%;background-color:white;height:190px;cursor: pointer"onclick="window.location.href='cushion.html'"><center><b>PRINTED CUSHIONS</b></center>
     </div>
   </div>
 
     <div class="col-md-4">
-  <div class="card" style="width:250px;background-color:rgb(106, 90, 205);border-width: 20px">
+  <div class="card" style="width:250px;background-color:rgb(106, 90, 205);border-width: 20px;margin-top: 5%;">
     <img class="card-img-top" src="image/album1.jpg" alt="Card image" style="width:100%;background-color:white;cursor: pointer"onclick="window.location.href='orders.html'"><center><b>CLIENT ORDERS</b></center>
     </div>
   </div>
 
 </div>
 
-<div class="row"style="padding-top:60px;padding-left: 10%">
+<div class="row"style="margin-top: 5%;padding-left: 10%">
 
   <div class="col-md-4">
-  <div class="card" style="width:250px;background-color:rgb(106, 90, 205);border-width: 20px">
+  <div class="card" style="width:250px;background-color:rgb(106, 90, 205);border-width: 20px;margin-top: 5%;">
     <img class="card-img-top" src="image/frame1.jpg" alt="Card image" style="width:100%;background-color:white;height: 190px;cursor: pointer"onclick="window.location.href='frame.html'"><center><b>PHOTO FRAMES</b></center>
     </div>
   </div>
 
     <div class="col-md-4">
-  <div class="card" style="width:250px;background-color:rgb(106, 90, 205);border-width: 20px">
+  <div class="card" style="width:250px;background-color:rgb(106, 90, 205);border-width: 20px;margin-top: 5%;">
     <img class="card-img-top" src="image/cover5.jpg" alt="Card image" style="width:100%;background-color:white;height: 190px;cursor: pointer"onclick="window.location.href='cover.html'"><center><b>PRINTED MOBILE COVERS</b></center>
     </div>
   </div>
