--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
 
 <div class="btn">
-  <center><h style="color: white; position: relative;
+  <center><h style="color: white;font-size:20px; position: relative;
   animation-name: example;animation-duration: 4s;"><b>𝓖𝓪𝓷𝓮𝓼𝓱 𝓟𝓱𝓸𝓽𝓸 𝓢𝓽𝓾𝓭𝓲𝓸 </b></h></center>
 <center><button class="button"onclick="window.location.href='a.html'"><span>Click here to enter</span></button>  </center></div> 
 
