--- a/a.html
+++ b/a.html
@@ -617,7 +617,7 @@ border-radius: 20px;
 <div id="service-content">
 <center><h1 style="font-family:Copperplate Gothic Bold;color: black"><b><u>Service</u></b></h1></center>
 <center><h4>(Click On Image To View More)</h4></center>
-  <div class="row"style="padding-top:60px;padding-left: 10%">
+  <div class="row"style="padding-top:60px>
 
   <div class="col-md-4">
   <div class="card" style="background-color:rgb(106, 90, 205);border-width: 20px">
@@ -639,7 +639,7 @@ border-radius: 20px;
 
 </div>
 
-<div class="row"style="padding-left: 10%">
+<div class="row">
 
   <div class="col-md-4">
   <div class="card" style="background-color:rgb(106, 90, 205);border-width: 20px;margin-top: 5%;">
