--- a/a.html
+++ b/a.html
@@ -612,12 +612,10 @@ border-radius: 20px;
       </div>
     </div>
   
-
-
 <div id="service-content">
 <center><h1 style="font-family:Copperplate Gothic Bold;color: black"><b><u>Service</u></b></h1></center>
 <center><h4>(Click On Image To View More)</h4></center>
-  <div class="row"style="padding-top:60px>
+  <div class="row"style="padding-top:60px">
 
   <div class="col-md-4">
   <div class="card" style="background-color:rgb(106, 90, 205);border-width: 20px">
@@ -662,6 +660,9 @@ border-radius: 20px;
 </div>
 
 </div>
+
+
+
 
 
 
